manifests/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chatbot
spec:
  hosts:
    - chatbot.agi.zjuici.com
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - name: chatbot-route
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: chatbot.jlzhou-chatbot.svc.cluster.local
            port:
              number: 8000
